--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "gantt-task-react",
   "version": "0.3.9",
   "description": "Interactive Gantt Chart for React with TypeScript.",
-  "author": "MaTeMaTuK <maksym.vikarii@gmail.com>",
-  "homepage": "https://github.com/MaTeMaTuK/gantt-task-react",
+  "author": "MaTeMaTuK and RuslanBely",
+  "homepage": "https://github.com/RuslanBely/gantt-task-react",
   "license": "MIT",
-  "repository": "MaTeMaTuK/gantt-task-react",
+  "repository": "RuslanBely/gantt-task-react",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
